--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "axios": "^1.7.2",
+    "country-codes-list": "^1.6.11",
     "crypto-js": "^4.2.0",
     "google-map-react": "^2.2.1",
     "react": "^18.3.1",
