--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "country-codes-list": "^1.6.11",
     "crypto-js": "^4.2.0",
     "google-map-react": "^2.2.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
