working on google cal callback with popup modal

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyCbCdR2g44WBC6PJFUXX5ZMWxX5wRnmYHQ
+REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyDlWD4XYcDKmtd93IyVm5xhJUUv5xzhew4
 REACT_APP_API_BASE_URL=http://localhost:5000
+REACT_APP_WEBSOCKET_URL=ws://localhost:5000
+REACT_APP_GOOGLE_REDIRECT_URI=http://localhost:3000/google/auth/callback
