--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "axios": "^1.7.2",
     "country-codes-list": "^1.6.11",
     "crypto-js": "^4.2.0",
+    "gapi-script": "^1.2.0",
     "google-map-react": "^2.2.1",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
